--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -44,6 +44,8 @@
 
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/notifyjs/notify.min.js"></script>
+
         @Html.Raw(JavaScriptSnippet.FullScript)
         @RenderSection("Styles", required: false)
     </head>
